# battle-cats-complete

./: .gitignore  Cargo.toml
core/: Cargo.toml
core/src/addons/: manager.rs  toolpaths.rs
core/src/addons/adb/: bridge.rs  download.rs  driver.rs
core/src/addons/apkeditor/: download.rs  xapk.rs
core/src/addons/avifenc/: download.rs  encoding.rs
core/src/addons/ffmpeg/: download.rs  encoding.rs
core/src/animation/: mod.rs
core/src/animation/export/: encoding.rs  findloop.rs  leader.rs  process.rs  state.rs
core/src/animation/logic/: canvas.rs  constants.rs  mod.rs  transform.rs
core/src/cat/: mod.rs  paths.rs  patterns.rs  registry.rs  waiter.rs
core/src/cat/data/: unitevolve.rs  unitid.rs
core/src/cat/logic/: abilities.rs  context.rs  filter.rs  loader.rs  scanner.rs  state.rs  stats.rs  talents.rs
core/src/data/: state.rs
core/src/data/leaders/: android.rs  export.rs  pack.rs  raw.rs
core/src/data/structure/: cat.rs  enemy.rs  global.rs  stage.rs
core/src/data/utilities/: apk.rs  engine.rs  keys.rs  manifest.rs  router.rs  rules.rs  sort.rs
core/src/enemy/: mod.rs  paths.rs  registry.rs  waiter.rs
core/src/enemy/data/: enemyname.rs  enemypicturebook.rs  t_unit.rs
core/src/enemy/logic/: abilities.rs  context.rs  filter.rs  loader.rs  scanner.rs  state.rs
core/src/global/: assets.rs  context.rs  resolver.rs  utils.rs
core/src/global/formats/: gatyaitembuy.rs  gatyaitemname.rs  imgcut.rs  maanim.rs  mamodel.rs  mod.rs
core/src/global/game/: localizable.rs  mod.rs  param.rs
core/src/global/io/: cache.rs  json.rs  paths.rs  patterns.rs
core/src/mods/export/: apk.rs  mod.rs  modify.rs  pack.rs  patch.rs  sign.rs
core/src/mods/import/: decrypt.rs  extract.rs
core/src/mods/logic/: manager.rs  metadata.rs  state.rs
core/src/settings/logic/: delete.rs  exceptions.json  exceptions.rs  keys.rs  pem.rs  state.rs
core/src/stage/: paths.rs  patterns.rs  registry.rs
core/src/stage/data/: charagroup.rs  drop_chara.rs  dropitem.rs  ex_option.rs  lockskipdata.rs  map_name.rs  map_option.rs  mapstagedata.rs  mod.rs  scatcpusetting.rs  specialrulesmap.rs  specialrulesmapoption.rs  stage.rs  stage_option.rs  stagename.rs
core/src/stage/logic/: loader.rs  mod.rs  restrictions.rs  rules.rs  scanner.rs  state.rs  treasure.rs  xp.rs
gui/: Cargo.toml
gui/src/: app.rs  main.rs  updater.rs
gui/src/app/: events.rs  frame.rs  reload.rs  startup.rs  tracing.rs
gui/src/features/animation/: canvas.rs  controls.rs  export.rs  process.rs  viewer.rs
gui/src/features/cat/: abilities.rs  conjure.rs  details.rs  filter.rs  header.rs  list.rs  master.rs  statblock.rs  state.rs  stats.rs  talents.rs  viewer.rs
gui/src/features/data/: export.rs  import.rs  manager.rs  state.rs
gui/src/features/enemy/: abilities.rs  filter.rs  header.rs  list.rs  master.rs  statblock.rs  state.rs  stats.rs  viewer.rs
gui/src/features/home/: changelog.rs  notice.rs  view.rs
gui/src/features/mods/: details.rs  export.rs  frame.rs  import.rs  list.rs  state.rs
gui/src/features/settings/: addons.rs  animation.rs  cats.rs  data.rs  (+7 more)
gui/src/global/: assets.rs  img015.rs  img022.rs  mod.rs  shared.rs  sheet.rs  utils.rs  watcher.rs
(+70 files in other folders)
