[workspace]
resolver = "2"
members = [
    "core",
    "gui",
    "lib",
    #"cli",
    "xtask",
]

[workspace.package]
version = "0.14.8"
edition = "2024"
license-file = "LICENSE"
authors = ["omochikaeri15 <251449262+omochikaeri15@users.noreply.github.com>"]
repository = "https://github.com/Battle-Cats-Complete/Battle-Cats-Complete"


[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"