[workspace]
resolver = "2"
members = [
    "core",
    "gui",
    #"cli",
    "xtask",
]

[workspace.package]
version = "0.16.5"
edition = "2024"
license-file = "LICENSE"
authors = ["omochikaeri15 <251449262+omochikaeri15@users.noreply.github.com>"]
repository = "https://github.com/omochikaeri15/battle-cats-complete"

[workspace.dependencies]
nyanko = { git = "https://github.com/omochikaeri15/nyanko" }

[patch."https://github.com/omochikaeri15/nyanko"]
nyanko = { path = "../nyanko" }

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"