[package]
name = "core"
version = "0.14.4"
edition = "2024"

[dependencies]
#nyanko = { path = "../lib" }
image = { version = "0.25", features = ["png", "ico"] }
zip = "2"
tar = "0.4"
zstd = { version = "0.13", features = ["zstdmt"] }
regex = "1"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8.2.0"
bytemuck = { version = "1", features = ["derive"] }
glow = "0.14.2"
aes = "0.8"
cbc = "0.1"
ecb = "0.1"
block-padding = "0.3"
md5 = "0.7"
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
webp-animation = "0.9.0"
gif = "0.13"
directories = "5.0"
indexmap = { version = "2", features = ["serde"] }
bincode = "1.3"
rustc-hash = "1.1"
anyhow = "1.0"
byteorder = "1.5"
sha2 = "0.10"
rsa = { version = "0.9", features = ["sha2", "pem"] }
base64 = "0.22"
rasn-pkix = "0.28.13"
rasn = "0.28.13"