[package]
name = "gui"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
nyanko = { path = "../lib" }
core = { path = "../core" }
eframe = { version = "0.29", features = ["persistence", "glow"] }
image = { version = "0.25", features = ["png", "ico"] }
rfd = "0.15"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
self_update = { version = "0.41", features = ["archive-zip", "compression-zip-deflate"] }
open = "5.1"
imageproc = "0.25.0"
ab_glyph = "0.2"
arboard = "3.4.0"
notify = "8.2.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"